--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.7.0",
     "node-sass": "4.12.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "3.0.0",
     "rimraf": "2.6.3",
     "sass-loader": "7.1.0",
@@ -50,6 +50,8 @@
   "dependencies": {
     "bulma-dracula": "^1.0.3",
     "html2canvas": "^1.0.0-rc.1",
-    "jspdf": "^1.5.3"
+    "jspdf": "^1.5.3",
+    "purgecss-webpack-plugin": "^1.5.0",
+    "terser-webpack-plugin": "^1.3.0"
   }
 }
