--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --color --open",
-    "dist": "rimraf ./dist && cross-env NODE_ENV=production webpack --color --progress --hide-modules",
+    "build": "rimraf ./dist && cross-env NODE_ENV=production webpack --color --progress --hide-modules",
     "publish-demo": "node ./publish-demo.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,32 +26,33 @@
   },
   "homepage": "https://github.com/mazipan/bulma-resume-template#readme",
   "devDependencies": {
-    "@babel/core": "7.8.4",
-    "@babel/preset-env": "7.8.4",
-    "babel-loader": "8.0.6",
-    "compression-webpack-plugin": "3.1.0",
-    "copy-webpack-plugin": "5.1.1",
-    "cross-env": "6.0.3",
-    "css-loader": "3.4.2",
-    "gh-pages": "2.2.0",
-    "html-webpack-plugin": "3.2.0",
-    "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "4.13.1",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "postcss-loader": "3.0.0",
-    "rimraf": "3.0.1",
-    "sass-loader": "8.0.2",
-    "style-loader": "1.1.3",
+    "@babel/core": "7.11.6",
+    "@babel/preset-env": "7.11.5",
+    "babel-loader": "8.1.0",
+    "compression-webpack-plugin": "6.0.2",
+    "copy-webpack-plugin": "6.1.1",
+    "cross-env": "7.0.2",
+    "css-loader": "4.3.0",
+    "ejs-loader": "^0.5.0",
+    "gh-pages": "3.1.0",
+    "html-webpack-plugin": "4.5.0",
+    "mini-css-extract-plugin": "0.11.2",
+    "node-sass": "4.14.1",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "postcss-loader": "4.0.2",
+    "rimraf": "3.0.2",
+    "sass-loader": "10.0.2",
+    "style-loader": "1.2.1",
     "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "4.41.5",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.10.2"
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "bulma-dracula": "^1.0.3",
-    "html2canvas": "^1.0.0-rc.1",
-    "jspdf": "^1.5.3",
-    "purgecss-webpack-plugin": "^1.5.0",
-    "terser-webpack-plugin": "^2.0.0"
+    "bulma-dracula": "^1.1.0",
+    "html2canvas": "1.0.0-rc.7",
+    "jspdf": "^2.1.1",
+    "purgecss-webpack-plugin": "^3.0.0",
+    "terser-webpack-plugin": "^4.2.2"
   }
 }
