--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "bulma": "^0.9.0",
     "bulma-dracula": "^1.1.0",
     "html2canvas": "1.0.0-rc.7",
     "jspdf": "^2.1.1",
