--- a/package.json
+++ b/package.json
@@ -1,59 +1,45 @@
 {
-  "name": "bulma-resume-template",
-  "version": "1.0.0",
-  "description": "💼 Free resume page template with bulma css",
-  "main": "index.js",
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --color --open",
-    "build": "rimraf ./dist && cross-env NODE_ENV=production webpack --color --progress --hide-modules",
-    "publish-demo": "node ./publish-demo.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mazipan/bulma-resume-template.git"
-  },
-  "keywords": [
-    "bulma",
-    "css-template",
-    "resume-template",
-    "resume-website"
-  ],
-  "author": "Irfan Maulana <github.com/mazipan/>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mazipan/bulma-resume-template/issues"
-  },
-  "homepage": "https://github.com/mazipan/bulma-resume-template#readme",
-  "devDependencies": {
-    "@babel/core": "7.11.6",
-    "@babel/preset-env": "7.11.5",
-    "babel-loader": "8.1.0",
-    "compression-webpack-plugin": "6.0.2",
-    "copy-webpack-plugin": "6.1.1",
-    "cross-env": "7.0.2",
-    "css-loader": "4.3.0",
-    "ejs-loader": "^0.5.0",
-    "gh-pages": "3.1.0",
-    "html-webpack-plugin": "4.5.0",
-    "mini-css-extract-plugin": "0.11.2",
-    "node-sass": "4.14.1",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
-    "postcss-loader": "4.0.2",
-    "rimraf": "3.0.2",
-    "sass-loader": "10.0.2",
-    "style-loader": "1.2.1",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0"
-  },
-  "dependencies": {
-    "bulma": "^0.9.0",
-    "bulma-dracula": "^1.1.1",
-    "html2canvas": "1.0.0-rc.7",
-    "jspdf": "^2.1.1",
-    "purgecss-webpack-plugin": "^3.0.0",
-    "terser-webpack-plugin": "^4.2.2"
-  }
+	"name": "bulma-resume-template",
+	"version": "1.0.0",
+	"description": "💼 Free resume page template with bulma css",
+	"main": "index.js",
+	"scripts": {
+		"watch:sass": "node-sass --importer node_modules/node-sass-magic-importer/dist/cli.js --watch src/scss -o dist/css",
+		"build:sass": "node-sass --importer node_modules/node-sass-magic-importer/dist/cli.js src/scss -o dist/css",
+		"build-local:sass": "node-sass --importer node_modules/node-sass-magic-importer/dist/cli.js src/scss -o dist/css",
+		"build:eleventy": "NODE_ENV=production eleventy",
+		"watch:eleventy": "cross-env NODE_ENV=development eleventy --watch --serve",
+		"start": "npm-run-all build-local:sass --parallel watch:*",
+		"build": "npm-run-all build:*",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/mazipan/bulma-resume-template.git"
+	},
+	"keywords": [
+		"bulma",
+		"css-template",
+		"resume-template",
+		"resume-website"
+	],
+	"author": "Irfan Maulana <github.com/mazipan/>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/mazipan/bulma-resume-template/issues"
+	},
+	"homepage": "https://github.com/mazipan/bulma-resume-template#readme",
+	"devDependencies": {
+		"cross-env": "7.0.2",
+		"gh-pages": "3.1.0",
+		"node-sass": "^4.14.1",
+		"node-sass-magic-importer": "^5.3.2",
+		"rimraf": "3.0.2"
+	},
+	"dependencies": {
+		"@11ty/eleventy": "^0.11.0",
+		"bulma": "^0.9.1",
+		"bulma-dracula": "^1.1.1",
+		"npm-run-all": "^4.1.5"
+	}
 }
